Updated methods (cross-species comparisons). Results: flight power. Results: stroke frequency.

--- a/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
+++ b/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
@@ -319,21 +319,43 @@ kJ/hr (\emph{P. phocoena}) to 1.4e7 kJ/hr (\emph{B. musculus}) (Fig.
 \subsection{\texorpdfstring{Flight power
 (\(P_{out}\))}{Flight power (P\_\{out\})}}\label{flight-power-p_out-1}
 
+Predicted stroke frequencies at cruising speed decreased with length,
+from 1.8 Hz for a 1.22 m \emph{P. phocoena} to 0.09 for a 25 m \emph{B.
+musculus} (Fig. \ref{fs_fig}).
+
+Across body sizes, \(P_{out}\) increased steeply with flight speed until
+an inflection point at approximately 1.8 m/s (Fig. \ref{Pout_fig}).
+
 \subsection{Case studies}\label{case-studies-1}
 
 \section{Figures}\label{figures}
 
 \begin{figure}
 \centering
-\includegraphics{Sonar_Response_Manuscript_files/figure-latex/unnamed-chunk-2-1.pdf}
+\includegraphics{Sonar_Response_Manuscript_files/figure-latex/Ep_fig-1.pdf}
 \caption{Energy per feeding event. Note log scale on y-axis.
 \label{Ep_fig}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{Sonar_Response_Manuscript_files/figure-latex/unnamed-chunk-3-1.pdf}
+\includegraphics{Sonar_Response_Manuscript_files/figure-latex/Pin_fig-1.pdf}
 \caption{Modeled consumption power (\(P_{in}\)). \label{Pin_fig}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Sonar_Response_Manuscript_files/figure-latex/fs_fig-1.pdf}
+\caption{Predicted stroke frequency (\(f_s\)) at crusing speed.
+\label{fs_fig}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Sonar_Response_Manuscript_files/figure-latex/Pout_fig-1.pdf}
+\caption{Flight power (\(P_{out}\)) by flight speed for
+\textit{B. musculus} (blue) and \textit{Z. cavistrostris} (red).
+\label{Pout_fig}}
 \end{figure}
 
 \section*{References}\label{references}
