--- a/Sonar Response Manuscript/Sonar Response Manuscript.Rmd
+++ b/Sonar Response Manuscript/Sonar Response Manuscript.Rmd
@@ -91,6 +91,10 @@ f &= \frac{1.5U}{L}
 ## Case studies
 We analyzed tag data from four controlled exposure experiments (CEEs) and applied the $E_{sonar}$ model to estimate energetic costs of observed behavioral responses to sonar exposure [BRS ref?]. As part of an on-going behavioral response study to naval sonar, in 2011-2015 *(???)* Blainville's beaked whales (*Mesoplodon densirostris*), Cuvier's beaked whales (*Ziphius cavirostris*), northern minke whales (*Balaenoptera acutorostrata*), and blue whales (*B. musculus*) were tracked with multi-sensor tags and exposed to mid-frequency active sonar in Southern California. Time displaced from foraging ($t_d$), time in flight ($t_f$), and speed of flight ($U_f$) were selected based on tag data. These values should be considered realistic scenarios, but not the typical or most common response. Behavioral responses to sonar exposure are highly variable and seem to depend on received sound level, distance to source, foraging behavior, and habituation [@southall_behavioral_2019; @wensveen_northern_2019].
 
+## Cross-species comparisons
+
+To facilitate comparisons of energetic consequences across body size, we present $E_{sonar}$ as 1) the energy cost ($kJ$), 2) the mass-specific energy cost ($kJ ~~ kg^{-1}$), and 3) the ratio of energy cost to daily basal metabolic requirements ($E_{sonar}:BMR$). Kleiber's equation for mammals predicts basal metabolic rate as: $BMR = 293.1 m^{0.75} ~~ (kJ/day)$ [@kleiber_fire_1975]. Given the uncertainty in BMR estimates for large cetaceans and the differences between basal and active metabolic rates, $E_{sonar}:BMR$ should be interpreted as an index of energetic consequence and not an absolute measure of impact.
+
 ```{r setup}
 library(tidyverse)
 library(scales)
@@ -213,12 +217,15 @@ Prey energy per feeding event was empirically derived from acoustic backscatter 
 Modeled consumption power covered four orders of magnitude: from 2.4e3 kJ/hr (*P. phocoena*) to 1.4e7 kJ/hr (*B. musculus*) (Fig. \ref{Pin_fig}).
 
 ## Flight power ($P_{out}$)
+Predicted stroke frequencies at cruising speed decreased with length, from 1.8 Hz for a 1.22 m *P. phocoena* to 0.09 for a 25 m *B. musculus* (Fig. \ref{fs_fig}).
+
+Across body sizes, $P_{out}$ increased steeply with flight speed until an inflection point at approximately 1.8 m/s (Fig. \ref{Pout_fig}). 
 
 ## Case studies
 
 Figures
 =======
-```{r fig.cap = "Energy per feeding event. Note log scale on y-axis. \\label{Ep_fig}", fig.height=4.5}
+```{r Ep_fig, fig.cap = "Energy per feeding event. Note log scale on y-axis. \\label{Ep_fig}", fig.height=4.5}
 prey_data %>% 
   uncount(weights = Percent) %>% 
   mutate(binomial = fct_relabel(binomial, abbr_binom)) %>% 
@@ -239,7 +246,7 @@ prey_data %>%
         legend.text = element_text(size = 8))
 ```
 
-```{r fig.cap = "Modeled consumption power ($P_{in}$). \\label{Pin_fig}"}
+```{r Pin_fig, fig.cap = "Modeled consumption power ($P_{in}$). \\label{Pin_fig}"}
 Ep_tbl <- prey_data %>%
   uncount(weights = Percent) %>% 
   group_by(binomial) %>% 
@@ -259,12 +266,10 @@ Pin_tbl <- inner_join(Ep_tbl, rf_tbl, by = "binomial") %>%
 
 Pin_tbl %>% 
   mutate(binomial = fct_relabel(binomial, abbr_binom)) %>% 
-  ggplot(aes(binomial, Pin_kJ_h, fill = Family)) +
+  ggplot(aes(binomial, log10(Pin_kJ_h), fill = Family)) +
   geom_col() +
-  scale_y_log10(name = expression(P[`in`] ~~ (kJ/h)),
-                labels = log_labels) +
   scale_fill_aaas() +
-  expand_limits(y = 1) +
+  labs(y = expression(log[10] ( P[`in`] ) * " (kJ/h)")) +
   theme_classic(base_size = ) +
   theme(axis.title.x = element_blank(),
         axis.text.x = element_text(hjust = 1,
@@ -274,6 +279,54 @@ Pin_tbl %>%
         legend.title = element_blank(),
         legend.direction = "horizontal",
         legend.text = element_text(size = 8))
+```
+
+```{r fs_fig, fig.cap = "Predicted cruising speed stroke frequencies ($f_s$). \\label{fs_fig}"}
+fs_fun <- function(U, L) 1.5 * U / L
+U_b_ms <- 1.5
+
+Pp_grob <- png::readPNG("../img/Phocoena-phocoena.png") %>% 
+  grid::rasterGrob(interpolate = TRUE)
+Bm_grob <- png::readPNG("../img/Balaenoptera-musculus.png") %>% 
+  grid::rasterGrob(interpolate = TRUE)
+
+morphologies %>% 
+  mutate(f_s = fs_fun(U_b_ms, Length_m)) %>% 
+  ggplot(aes(log10(Length_m), log10(f_s))) +
+  geom_line() +
+  geom_point() +
+  annotation_custom(Pp_grob,
+                    xmin = 0.15, xmax = 0.35,
+                    ymin = 0.2, ymax = 0.35) +
+  annotation_custom(Bm_grob,
+                    xmin = 0.95, xmax = 1.3,
+                    ymin = -1.18, ymax = -0.85) +
+  labs(x = expression(log[10] ( "Length" ) * " (m)"),
+       y = expression(log[10] ( "Stroke frequency" ) * " (Hz)")) +
+  theme_classic()
+```
+
+```{r Pout_fig, fig.cap = "Flight power ($P_{out}$) by flight speed for \\textit{B. musculus} (blue) and \\textit{Z. cavistrostris} (red). \\label{Pout_fig}"}
+CL_fun <- function(m) 1.46 + 0.0005 * m
+
+Pout_fun <- function(u, l, m) {
+  f_f <- fs_fun(u, l)
+  f_b <- fs_fun(U_b_ms, l)
+  (f_f - f_b) * CL_fun(m) * m
+}
+
+crossing(binomial = c("Ziphius cavirostris",
+                      "Balaenoptera musculus"),
+         speed = seq(1.51, 5, length.out = 100)) %>% 
+  left_join(morphologies, by = "binomial") %>%
+  mutate(P_out = Pout_fun(speed, Length_m, Mass_kg)) %>% 
+  ggplot(aes(x = speed, y = log10(P_out), color = binomial)) +
+  geom_line() +
+  scale_color_aaas() +
+  labs(x = "Flight speed (m/s)",
+       y = expression(log[10] ( P[out]  ) * " (kJ/hr)")) +
+  theme_classic() +
+  theme(legend.position = "none")
 ```
 
 References {#references .unnumbered}
