--- a/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
+++ b/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
@@ -86,6 +86,12 @@
     \author[1]{Will T Gough}
   
   
+    \author[1]{Paolo}
+  
+  
+    \author[1]{Danuta}
+  
+  
     \author[1]{Jeremy A Goldbogen}
   
   
