--- a/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
+++ b/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
@@ -296,13 +296,17 @@ and odontocete feeding rates ranged from 2.5 to 96.8 buzzes/hour (Table
 
 \begin{table}[t]
 
-\caption{\label{tab:rf_tbl}Cetacean feeding rates \label{rf_tbl}}
+\caption{\label{tab:unnamed-chunk-1}Cetacean feeding rates \label{rf_tbl}}
 \centering
 \begin{threeparttable}
 \begin{tabular}{llrr}
 \toprule
 Group & Species & $r_f$ & N\\
 \midrule
+Rorqual & \textit{Balaenoptera bonaerensis} & 44.1 & 3\\
+Rorqual & \textit{Megaptera novaeangliae} & 17.2 & 6\\
+Rorqual & \textit{Balaenoptera physalus} & 13.3 & 3\\
+Rorqual & \textit{Balaenoptera musculus} & 10.7 & 11\\
 Odontocete & \textit{Phocoena phocoena} & 96.8 & 8\\
 Odontocete & \textit{Grampus griseus} & 17.7 & 17\\
 Odontocete & \textit{Mesoplodon densirostris} & 13.0 & 14\\
@@ -312,10 +316,6 @@ Odontocete & \textit{Orcinus orca} & 9.7 & 10\\
 Odontocete & \textit{Ziphius cavirostris} & 12.8 & 4\\
 Odontocete & \textit{Berardius bairdii} & 4.6 & 1\\
 Odontocete & \textit{Physeter macrocephalus} & 12.5 & 36\\
-Rorqual & \textit{Balaenoptera bonaerensis} & 44.1 & 3\\
-Rorqual & \textit{Megaptera novaeangliae} & 17.2 & 6\\
-Rorqual & \textit{Balaenoptera physalus} & 13.3 & 3\\
-Rorqual & \textit{Balaenoptera musculus} & 10.7 & 11\\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
